k8s/taskmanager-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:  
  name: task-amanger
  namespace: task-manager
spec :
  replicas: 2
  selector:
    matchLabels:
     app: task-manager
  template:
    metadata:
      labels:
        app: task-manager
    spec:
      containers:
        - name: task-manager
          image: ananyashinde/newfolder-task-manager:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 8000
