k8s/taskmanager-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: task-manager
  namespace: task-manager

spec:
  selector:
   app: task-manager
  ports:
    - port: 8000
      targetPort: 8000

  type: NodePort
