k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: task-manager-ingress
  namespace: task-manager

spec:

  rules:

    - host: taskmanager.local

      http:

        paths:

          - path: /

            pathType: Prefix

            backend:

              service:

                name: task-manager

                port:
                  number: 8000
